--- a/src/assets/styles/General.scss
+++ b/src/assets/styles/General.scss
@@ -4,14 +4,14 @@
 @import url(https://necolas.github.io/normalize.css/latest/normalize.css);
 
 /* fonts */
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
   box-sizing: border-box;
   padding: 5px;
 
   body {
-    background-color: $page-general-background;
     font-family: "Roboto", sans-serif;
+    background-color: $page-general-background;
   }
 }
